crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_basic_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "qs",
      "matches": {
        "answer": "Choices create costs and benefits."
      },
      "primary_key": {
        "id": 863
      },
      "score": 0.87
    },
    {
      "dataset": "qs",
      "matches": {},
      "primary_key": {
        "id": 1316
      },
      "score": 0.83
    },
    {
      "dataset": "qs",
      "matches": {},
      "primary_key": {
        "id": 590
      },
      "score": 0.82
    },
    {
      "dataset": "qs",
      "matches": {
        "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
      },
      "primary_key": {
        "id": 6
      },
      "score": 0.82
    }
  ]
}
