crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.78,
      "dataset": "qs",
      "matches": {
        "answer": [
          " is 2."
        ]
      },
      "primary_key": {
        "id": 349
      }
    },
    {
      "_score": 0.55,
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": 0.55,
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.52,
      "dataset": "qs",
      "matches": {
        "answer": [
          "\n\\( 232 \\times 0.14 = 32.48 \\)"
        ]
      },
      "primary_key": {
        "id": 830
      }
    }
  ]
}
