crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_keywords_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.55,
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.49,
      "dataset": "qs",
      "matches": {
        "answer": [
          "The number of such arrangements is \\(10! - 2 \\times 9! + 8"
        ]
      },
      "primary_key": {
        "id": 451
      }
    },
    {
      "_score": 0.49,
      "dataset": "qs",
      "matches": {
        "answer": [
          "Yes, because the last two digits (48) form a number that i"
        ]
      },
      "primary_key": {
        "id": 556
      }
    },
    {
      "_score": 0.49,
      "dataset": "qs",
      "matches": {
        "answer": [
          " numbers:  \n1.80  \n+ 0.27  \n------  \n2.0"
        ]
      },
      "primary_key": {
        "id": 21
      }
    }
  ]
}
