crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.5559,
      "data": {
        "question": "What is the fifth root of 32?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": 0.5559,
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.536,
      "data": {
        "question": "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\)."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\"
        ]
      },
      "primary_key": {
        "id": 189
      }
    },
    {
      "_score": 0.5349,
      "data": {
        "question": "Identify the given number as prime, composite, or neither: 36."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          " divisors other than 1 and itself (e.g., 2, 3, 4, 6, 9, 12, 18)"
        ]
      },
      "primary_key": {
        "id": 484
      }
    }
  ]
}
